# glApi

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Linux.yml  Win.yml
cmake/: 3rdparty.cmake  ctools.cmake  glad.cmake  glapi.cmake  glfw.cmake  imguipack.cmake  tinyxml2.cmake
glApi/: fbo.hpp  glApi.hpp  mesh.hpp  meshVfx.hpp  procMesh.hpp  program.hpp  programauto.hpp  quadMesh.hpp  quadVfx.hpp  quadVfxauto.hpp  shader.hpp  shaderauto.hpp  texture.hpp  uniforms.hpp
src/: main.cpp
src/MainFrame/: CodeEditor.cpp  ImGuiThemes.cpp  MainFrame.cpp  MainFrame.h
src/Panes/: CodePane.cpp  CodePane.h  ConsolePane.cpp  ViewPane.cpp  ViewPane.h
src/Res/: Cousine_Regular.cpp  Roboto_Medium.cpp
tests/: CMakeLists.txt  main.cpp
tests/Test_glApi/: Test_glApi.cpp  Test_glApi.h  Test_glApi_Uniforms.cpp  Test_glApi_Uniforms.h
